--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
+    "@angular/core": "^5.1.1",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "angular-azure-blob-service": "^0.7.0",
     "angular-cors": "^1.0.0",
+    "auto-upgrade-npm-version": "^1.0.7",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
@@ -31,7 +32,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.0",
+    "@angular/cli": "^1.6.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/cors": "^2.8.3",
